--- a/css/additional.css
+++ b/css/additional.css
@@ -24,3 +24,13 @@
 pre, blockquote {
     text-shadow: none;
 }
+
+ic {
+    font-family: "Consolas" !important;
+    font-size: .8em;
+    border:  rgba(0, 0, 0, 0.16) 1px solid;
+    border-radius: 3px;
+    background-color: rgba(249, 251, 179, 0.16);
+    padding: 2px 4px;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.25);
+}
