Auto updating draft changes

--- a/app/views/impulse/en/header.phtml
+++ b/app/views/impulse/en/header.phtml
@@ -19,9 +19,13 @@
     <script>hljs.initHighlightingOnLoad();</script>
     <!-- End: Syntax Highlighting -->
 
-    <link rel="stylesheet" href="/css/additional.css">
+    <link rel="stylesheet" href="/assets/additional.css">
     <script type="text/javascript" src="{{ vendor }}/components/jquery/jquery.min.js"></script>
     <script type="text/javascript" src="{{ assets }}/js/mobileMenu.js"></script>
+
+    <link rel="icon"
+          type="image/png"
+          href="/img/wiki.png">
 
     <style type="text/css">
         #topbar {
