--- a/app/views/impulse/en/header.phtml
+++ b/app/views/impulse/en/header.phtml
@@ -25,7 +25,7 @@
 
     <link rel="icon"
           type="image/png"
-          href="/img/wiki.png">
+          href="/wiki/en/img/wiki.png">
 
     <style type="text/css">
         #topbar {
