--- a/assets/additional.css
+++ b/assets/additional.css
@@ -26,12 +26,28 @@ pre, blockquote {
     font-size: 1.01em;
 }
 
-ic {
+ic,code:not(.hljs) {
     font-family: "Inconsolata-g for Powerline", "Consolas" !important;
     font-size: .8em;
     border:  rgba(0, 0, 0, 0.16) 1px solid;
     border-radius: 3px;
     background-color: #e6e6e6;
-    padding: 1px 4px;
+    padding: 1px 4px !important;
     text-shadow: 1px 1px 1px rgba(255, 255, 255, .8);
+}
+kbd {
+    display: inline-block;
+    margin: 0 .1em;
+    padding: .1em .6em;
+    font-family: Arial,Helvetica,sans-serif;
+    font-size: 11px;
+    font-weight: 900;
+    line-height: 1.4;
+    color: #242729;
+    text-shadow: 0 1px 0 #FFF;
+    background-color: #e1e3e5;
+    border: 1px solid #adb3b9;
+    border-radius: 3px;
+    box-shadow: 0 1px 0 rgba(12,13,14,0.2), 0 0 0 2px #FFF inset;
+    white-space: nowrap;
 }
