--- a/app/views/impulse/en/header.phtml
+++ b/app/views/impulse/en/header.phtml
@@ -37,6 +37,7 @@
     </style>
 
     <link href='//fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet" type='text/css'>
 </head>
 <body>
 
