Adding an expandable left menu

--- a/app/views/impulse/en/footer.phtml
+++ b/app/views/impulse/en/footer.phtml
@@ -4,6 +4,28 @@
 
 <div id="toTop"><a href="#top">^ Top</a></div>
 
+<script>
+    $("#jstree_div").jstree({
+        "conditionalselect" : function (node) {
+        return false;
+        },
+        "plugins" : ['conditionalselect'],
+        "core" : { // core options go here
+            "themes" : { "icons": false },
+        },
+        "state" : { "key" : "state_wiki" },
+        "plugins" : ["state"],
+    });
+
+    $(document).on('click', '.jstree-anchor', function(e) {
+        var page = $(this).parent().attr("page");
+        if (page != null) {
+            window.location.href = page;
+        }
+    });
+
+    $(function () { $('#jstree_div').jstree(); });
+</script>
 </body>
-	<script src="/assets/additional.js"></script>
+	<script src="assets/additional.js"></script>
 </html>
