--- a/app/views/impulse/assets/css/main.css
+++ b/app/views/impulse/assets/css/main.css
@@ -177,7 +177,9 @@ a.anchor {
 #leftSide ul ul {
     border-left: 0px;
     border-right: 0px;
+/*
     border-left: 1px solid #ccc;
+*/
     padding-left: 12px;
     padding-bottom: 0px;
 }
