--- a/assets/additional.css
+++ b/assets/additional.css
@@ -54,3 +54,7 @@ kbd {
     box-shadow: 0 1px 0 rgba(12,13,14,0.2), 0 0 0 2px #FFF inset;
     white-space: nowrap;
 }
+
+#leftSide ul ul {
+    border-left: none;
+}
