--- a/assets/additional.css
+++ b/assets/additional.css
@@ -1,7 +1,7 @@
 #rightSide {
     font-family: 'Ubuntu';
     font-size: 1.3em;
-
+    /*padding-left: 400px;*/
 }
 
 #rightSide p{
@@ -18,6 +18,13 @@
 /*To support scrolling on the left menu*/
 #leftSide {
     height:400px;
+    width: 400px;
+    font-family: 'Ubuntu';
+}
+
+#leftSide ul {
+    /*font-size: 1.0em;*/
+    /*!*font-weight: 100;*!*/
 }
 
 /* No shadow for code blocks */
@@ -55,6 +62,15 @@ kbd {
     white-space: nowrap;
 }
 
+#topbar {
+    -webkit-box-shadow: 0 2px 9px 0 #222;
+    box-shadow: 0 2px 9px 0 #222;
+}
+
 #leftSide ul ul {
     border-left: none;
+}
+
+li.jstree-leaf > a .jstree-icon{
+    background:url("/vendor/components/jTree/themes/icons/doc11.png") 0px 0px no-repeat !important;
 }
