added apple font

--- a/assets/additional.css
+++ b/assets/additional.css
@@ -74,3 +74,8 @@ kbd {
 li.jstree-leaf > a .jstree-icon{
     background:url("/vendor/components/jTree/themes/icons/doc11.png") 0px 0px no-repeat !important;
 }
+
+@font-face {
+    font-family: "AppleGothic";
+    src: url(/app/views/impulse/assets/fonts/AppleGothic.ttf) format("truetype");
+}
